--- a/2.4/conf/sites-available/default-ssl.conf
+++ b/2.4/conf/sites-available/default-ssl.conf
@@ -5,6 +5,9 @@ Listen 443
   DocumentRoot "/var/www/html/"
   <Directory "/var/www/html/">
     Require all denied
+    Options Indexes FollowSymLinks MultiViews
+		AllowOverride None
+		DirectoryIndex disabled
   </Directory>
   CustomLog /proc/self/fd/1 combined
   ErrorLog /proc/self/fd/2
