--- a/2.4/conf/conf-available/dav.conf
+++ b/2.4/conf/conf-available/dav.conf
@@ -1,6 +1,8 @@
 DavLockDB "/var/lib/dav/DavLock"
 Alias / "/var/lib/dav/data/"
 <Directory "/var/lib/dav/data/">
+  DirectoryIndex disabled
+
   Dav On
   Options Indexes FollowSymLinks
 
